# pizza_prediction

./: .gitignore  README.md  app.py  pyproject.toml  testes.ipynb
